[package]
name = "pdqhash"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
dct_matrix = {path="dct_matrix"}

[dev-dependencies]
hex = "*"
criterion = "0.3"

[[bench]]
name = "pdq_benchmark"
harness = false